--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "01-profile-readme",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "A modern, accessible developer profile template with glassmorphism design, dark/light mode, and GitHub stats integration.",
   "main": "index.html",
   "type": "module",
@@ -31,9 +31,17 @@
   "bugs": {
     "url": "https://github.com/mk-knight23/01-profile-readme/issues"
   },
-  "homepage": "https://01-profile-readme.vercel.app",
+  "homepage": "https://mk-knight23.github.io/01-profile-readme/",
   "devDependencies": {
-    "eslint": "^9.0.0",
-    "vite": "^7.3.1"
+    "eslint": "^9.19.0",
+    "vite": "^6.0.11",
+    "framer-motion": "^12.0.1",
+    "gsap": "^3.12.7",
+    "lucide-react": "^0.474.0",
+    "tailwindcss": "^4.0.0"
+  },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
